Attempt to display multiple visualizations at once.

--- a/webserver/src/main/resources/static/heaperv4.html
+++ b/webserver/src/main/resources/static/heaperv4.html
@@ -33,13 +33,19 @@ div.tooltip {
     pointer-events: none;
 }
 
+div.treeCell {
+    width: 200px;
+    height: 200px;
+    display: inline;
+}
+
 </style>
 
 <body>
 
-<div id="heap"></div>
-
-<div id="content"></div>
+<div class="treeCell" id="heap"></div>
+<div class="treeCell" id="heap2"></div>
+<div class="treeCell" id="heap3"></div>
 
 <!-- load the d3.js library -->
 
@@ -55,251 +61,259 @@ div.tooltip {
 <script type="text/javascript" src="/root/webserver/static/js/unflatten.js"></script>
 <script>
 
-    var sfid = 1000;
-    var data = [{id: 0}];
+    /*var div = d3.select("body").append("div")
+        .attr("class", "tooltip")
+        .style("opacity", 0);*/
 
-    function addNewDataItem() {
-        var d = {id: (++sfid)},
-            parent = data[~~(Math.random() * data.length)];
-        d.parentid = parent.id;
-        data.push(d);
-    }
+    var containerId = "heap";
+    var containerId2 = "heap2";
+    var containerId3 = "heap3";
 
-    for (k = 0; k < 3; k++) {
-        addNewDataItem();
-    }
 
-    var margin = {top: 20, right: 90, bottom: 30, left: 90},
-        width = 960 - margin.left - margin.right,
-        height = 500 - margin.top - margin.bottom;
+    function buildTree(divContainerId) {
 
-    var i = 0,
-        duration = 5000,
-        root;
+        var sfid = 1000;
+        var data = [{id: 0}];
 
-    var timer = setInterval(function() {
+        function addNewDataItem() {
+            var d = {id: (++sfid)},
+                parent = data[~~(Math.random() * data.length)];
+            d.parentid = parent.id;
+            data.push(d);
+        }
+
+        for (k = 0; k < 3; k++) {
+            addNewDataItem();
+        }
+
+        var margin = {top: 20, right: 90, bottom: 30, left: 90},
+            width = 300 - margin.left - margin.right,
+            height = 300 - margin.top - margin.bottom;
+
+        var svg = d3.select("#" + divContainerId)
+            .append("svg")
+            .attr("width", width + margin.right + margin.left)
+            .attr("height", height + margin.top + margin.bottom);
+
+        var i = 0,
+            duration = 5000,
+            root;
+
+        var timer = setInterval(function () {
             addNewDataItem();
             buildHeap(data);
         }, duration);
 
-    var svg = d3.select("#heap")
-        .append("svg")
-        .attr("width", width + margin.right + margin.left)
-        .attr("height", height + margin.top + margin.bottom);
+        var g = svg.append("g")
+            .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-    var g = svg.append("g")
-        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-    var div = d3.select("body").append("div")
-        .attr("class", "tooltip")
-        .style("opacity", 0);
-
-    var tree = d3.tree().size([width, height]);
+        var tree = d3.tree().size([width, height]);
 
 
-    function buildHeap(inData){
-        var treeUnflattened = unflatten( inData );
-        var preparedTree = {"id" : "root" };
-        preparedTree.children = treeUnflattened;
+        function buildHeap(inData) {
+            var treeUnflattened = unflatten(inData);
+            var preparedTree = {"id": "root"};
+            preparedTree.children = treeUnflattened;
 
-        root = d3.hierarchy(preparedTree, function(d) { return d.children; });
-
-        root.x0 = 0;
-        root.y0 = width/2;
-
-        update(root)
-    }
-
-    var nodes;
-
-    function update(source){
-
-        var treeData = tree(source);
-        nodes = treeData.descendants();
-
-        var links = treeData.descendants().slice(1);
-
-        // ****************** Nodes section ***************************
-        // Update the nodes...
-        var selection = g.selectAll('g.node');
-
-        var node = selection
-            .data(nodes, function(d) {
-                return d.data.id || (d.data.id = ++sfid);
+            root = d3.hierarchy(preparedTree, function (d) {
+                return d.children;
             });
 
-        // Enter any new modes at the parent's previous position.
-        var nodeEnter = node.enter().append('g')
-            .attr('class', 'node')
-            .attr("x", x)
-            .attr("y", y)
-            .attr("transform", function(d) {
-                var tr = "translate(" + (d.parent ? d.parent.data.x0 : d.x0) + "," + (d.parent ? d.parent.data.y0 : d.y0) + ")";
-                return tr;
-            });
+            root.x0 = 0;
+            root.y0 = width / 2;
 
-        // Add Circle for the nodes
-        nodeEnter.append('circle')
-            .attr('class', 'node')
-            .attr('r', 1e-6)
-            .style("fill", function(d) {
-                return d._children ? "lightsteelblue" : "#fff";
-            })
-            .on("mouseover", function (d) {
-                div.transition()
-                    .duration(200)
-                    .style("opacity", .9);
-                div.html("Hello" + "<br/>" + "world:" + d.data.id)
-                    .style("left", (d3.event.pageX) + "px")
-                    .style("top", (d3.event.pageY - 28) + "px");
-            })
-            .on("mouseout", function (d) {
-                div.transition()
-                    .duration(500)
-                    .style("opacity", 0);
-            })
-            .on("click", function(d) {
-                return click(d, source);
-            });
+            update(root)
+        }
 
-        // Add labels for the nodes
-        nodeEnter.append('text')
-            .attr("dy", ".35em")
-            .attr("x", function(d) {
-                return d.children || d._children ? -13 : 13;
-            })
-            .attr("text-anchor", function(d) {
-                return d.children || d._children ? "end" : "start";
-            })
-            .text(function(d) { return d.data.id + ":" + d.data.parentid; });
+        var nodes;
 
-        // UPDATE
-        var nodeUpdate = nodeEnter.merge(node);
+        function update(source) {
 
-        // Transition entered and existent nodes to the proper position for the node
-        nodeUpdate.transition()
-            .duration(duration)
-            .attr("transform", function(d) {
-                return "translate(" + d.x + "," + d.y + ")";
-            });
+            var treeData = tree(source);
+            nodes = treeData.descendants();
 
-        // Update the node attributes and style
-        nodeUpdate.select('circle.node')
-            .attr('r', 10)
-            .style("fill", function(d) {
-                return d._children ? "lightsteelblue" : "#fff";
-            })
-            .attr('cursor', 'pointer');
+            var links = treeData.descendants().slice(1);
+
+            // ****************** Nodes section ***************************
+            // Update the nodes...
+            var selection = g.selectAll('g.node');
+
+            var node = selection
+                .data(nodes, function (d) {
+                    return d.data.id || (d.data.id = ++sfid);
+                });
+
+            // Enter any new modes at the parent's previous position.
+            var nodeEnter = node.enter().append('g')
+                .attr('class', 'node')
+                .attr("x", x)
+                .attr("y", y)
+                .attr("transform", function (d) {
+                    var tr = "translate(" + (d.parent ? d.parent.data.x0 : d.x0) + "," + (d.parent ? d.parent.data.y0 : d.y0) + ")";
+                    return tr;
+                });
+
+            // Add Circle for the nodes
+            nodeEnter.append('circle')
+                .attr('class', 'node')
+                .attr('r', 1e-6)
+                .style("fill", function (d) {
+                    return d._children ? "lightsteelblue" : "#fff";
+                })
+                .on("mouseover", function (d) {
+                    div.transition()
+                        .duration(200)
+                        .style("opacity", .9);
+                    div.html("Hello" + "<br/>" + "world:" + d.data.id)
+                        .style("left", (d3.event.pageX) + "px")
+                        .style("top", (d3.event.pageY - 28) + "px");
+                })
+                .on("mouseout", function (d) {
+                    div.transition()
+                        .duration(500)
+                        .style("opacity", 0);
+                })
+                .on("click", function (d) {
+                    return click(d, source);
+                });
+
+            // Add labels for the nodes
+            nodeEnter.append('text')
+                .attr("dy", ".35em")
+                .attr("x", function (d) {
+                    return d.children || d._children ? -13 : 13;
+                })
+                .attr("text-anchor", function (d) {
+                    return d.children || d._children ? "end" : "start";
+                })
+                .text(function (d) {
+                    return d.data.id + ":" + d.data.parentid;
+                });
+
+            // UPDATE
+            var nodeUpdate = nodeEnter.merge(node);
+
+            // Transition entered and existent nodes to the proper position for the node
+            nodeUpdate.transition()
+                .duration(duration)
+                .attr("transform", function (d) {
+                    return "translate(" + d.x + "," + d.y + ")";
+                });
+
+            // Update the node attributes and style
+            nodeUpdate.select('circle.node')
+                .attr('r', 10)
+                .style("fill", function (d) {
+                    return d._children ? "lightsteelblue" : "#fff";
+                })
+                .attr('cursor', 'pointer');
 
 
-        // Remove any exiting nodes
-        var nodesAboutToExit = node.exit();
-        var nodeExit = nodesAboutToExit.transition()
-            .duration(duration)
-            .attr("transform", function(d) {
-                return "translate(" + d.x + "," + d.y + ")";
-            })
-            .remove();
+            // Remove any exiting nodes
+            var nodesAboutToExit = node.exit();
+            var nodeExit = nodesAboutToExit.transition()
+                .duration(duration)
+                .attr("transform", function (d) {
+                    return "translate(" + d.x + "," + d.y + ")";
+                })
+                .remove();
 
-        // On exit reduce the node circles size to 0
-        nodeExit.select('circle')
-            .attr('r', 1e-6);
+            // On exit reduce the node circles size to 0
+            nodeExit.select('circle')
+                .attr('r', 1e-6);
 
-        // On exit reduce the opacity of text labels
-        nodeExit.select('text')
-            .style('fill-opacity', 1e-6);
+            // On exit reduce the opacity of text labels
+            nodeExit.select('text')
+                .style('fill-opacity', 1e-6);
 
 // ****************** links section ***************************
 
-        // Update the links...
-        var link = g.selectAll('path.link')
-            .data(links, function(d) {
-                return d.data.id;
+            // Update the links...
+            var link = g.selectAll('path.link')
+                .data(links, function (d) {
+                    return d.data.id;
+                });
+
+            // Enter any new links at the parent's previous position.
+            var linkEnter = link.enter().insert('path', "g")
+                .attr("class", "link")
+                .attr('d', function (d) {
+                    var o = {x: (d.parent ? d.parent.data.x0 : d.x0), y: (d.parent ? d.parent.data.y0 : d.y0)};
+                    return diagonal(o, o)
+                });
+
+            // UPDATE
+            var linkUpdate = linkEnter.merge(link);
+
+            // Transition back to the parent element position
+            linkUpdate.transition()
+                .duration(duration)
+                .attr("x", x)
+                .attr("y", y)
+                .attr('d', function (d) {
+                    return diagonal(d, d.parent)
+                });
+
+            // Remove any exiting links
+            var linkExit = link.exit().transition()
+                .duration(duration)
+                .attr('d', function (d) {
+                    var o = {x: (d.parent ? d.parent.data.x0 : d.x0), y: (d.parent ? d.parent.data.y0 : d.y0)};
+                    console.log("Removed link");
+                    return diagonal(o, o)
+                })
+                .remove();
+
+            // Store the old positions for transition.
+            nodes.forEach(function (d, i) {
+                d.x0 = d.x;
+                d.y0 = d.y;
             });
 
-        // Enter any new links at the parent's previous position.
-        var linkEnter = link.enter().insert('path', "g")
-            .attr("class", "link")
-            .attr('d', function(d){
-                var o = { x: (d.parent ? d.parent.data.x0 : d.x0) , y: (d.parent ? d.parent.data.y0 : d.y0)};
-                return diagonal(o, o)
-            });
+        }
 
-        // UPDATE
-        var linkUpdate = linkEnter.merge(link);
+        function x(d) {
+            return d.data.x0 = d.x;
+        }
 
-        // Transition back to the parent element position
-        linkUpdate.transition()
-            .duration(duration)
-            .attr("x", x)
-            .attr("y", y)
-            .attr('d', function(d){
-                return diagonal(d, d.parent)
-            });
+        function y(d) {
+            return d.data.y0 = d.y;
+        }
 
-        // Remove any exiting links
-        var linkExit = link.exit().transition()
-            .duration(duration)
-            .attr('d', function(d) {
-                var o = { x: (d.parent ? d.parent.data.x0 : d.x0) , y: (d.parent ? d.parent.data.y0 : d.y0)};
-                console.log("Removed link");
-                return diagonal(o, o)
-            })
-            .remove();
-
-        // Store the old positions for transition.
-        nodes.forEach(function(d, i){
-            d.x0 = d.x;
-            d.y0 = d.y;
-        });
-
-    }
-
-    function x(d) {
-        return d.data.x0 = d.x;
-    }
-
-    function y(d) {
-        return d.data.y0 = d.y;
-    }
-
-    // Creates a curved (diagonal) path from parent to the child nodes
-    // switched around all the x's and y's from orig so it's verticle
-    function diagonal(s, d) {
+        // Creates a curved (diagonal) path from parent to the child nodes
+        // switched around all the x's and y's from orig so it's verticle
+        function diagonal(s, d) {
             return "M" + d.x + "," + d.y
                 + "C" + d.x + "," + (d.y + s.y) / 2
-                + " " + s.x + "," +  (d.y + s.y) / 2
+                + " " + s.x + "," + (d.y + s.y) / 2
                 + " " + s.x + "," + s.y;
-    }
+        }
 
-    function click(d, source) {
+        function click(d, source) {
 //        source.children.forEach(collapse);
-        if (d.children) {
-            d._children = d.children;
-            d.children = null;
-            update( source );
-        } else if(d._children){
-            d.children = d._children;
-            d._children = null;
+            if (d.children) {
+                d._children = d.children;
+                d.children = null;
+                update(source);
+            } else if (d._children) {
+                d.children = d._children;
+                d._children = null;
 
-            update( source ); //TODO this is not enough because by timer we are using `data` from scratch and display them again.
-            //TODO maybe we can update `data` and set field collapsed....so that field with childrens will be `_children`.
-        }
-        else {
-           console.log("No children");
+                update(source); //TODO this is not enough because by timer we are using `data` from scratch and display them again.
+                //TODO maybe we can update `data` and set field collapsed....so that field with childrens will be `_children`.
+            }
+            else {
+                console.log("No children");
+            }
+
         }
 
+        buildHeap(data);
     }
 
-    /*function collapse(d) {
-        if(d.children) {
-            d._children = d.children;
-            d._children.forEach(collapse);
-            d.children = null
-        }
-    }*/
-
-    buildHeap( data )
+    buildTree(containerId);
+    buildTree(containerId2);
+    buildTree(containerId3);
 
 </script>
 </body>
