--- a/webserver/src/main/resources/static/heaperv4.html
+++ b/webserver/src/main/resources/static/heaperv4.html
@@ -72,6 +72,11 @@ div.treeCell {
 
     function buildTree(divContainerId) {
 
+        var div = d3.select("body").append("div")
+        .attr("class", "tooltip")
+        .attr("id", "tt_"+divContainerId)
+        .style("opacity", 0);
+
         var sfid = 1000;
         var data = [{id: 0}];
 
@@ -86,7 +91,7 @@ div.treeCell {
             addNewDataItem();
         }
 
-        var margin = {top: 20, right: 90, bottom: 30, left: 90},
+        var margin = {top: 20, right: 20, bottom: 30, left: 20}, // Calculate max number of children on the level and decide the width of the heapContainer
             width = 300 - margin.left - margin.right,
             height = 300 - margin.top - margin.bottom;
 
@@ -153,7 +158,7 @@ div.treeCell {
                     return tr;
                 });
 
-            // Add Circle for the nodes
+            // Add Border/Rect for the nodes
             nodeEnter.append('rect')
                 .attr('class', 'node')
                 .attr("width", 30)
@@ -181,14 +186,27 @@ div.treeCell {
             // Add labels for the nodes
             nodeEnter.append('text')
                 .attr("dy", ".35em")
+                .style("fill", "green")
                 .attr("x", function (d) {
-                    return d.children || d._children ? -13 : 13;
+                    <!--if(d.value == "kNN") then more padding-->
+                    <!--var siblingText = this.parentNode.children[0]; // this.parentNode.getAttribute("x")-->
+                    <!--var siblingText_X = d.parentNode.selectAll("text");-->
+                    <!--return 3;-->
+                    return d.children || d._children ? 17 : 3;
+                })
+                .attr("y", function (d) {
+                    return 13;
+                    <!--return d.children || d._children ? -13 : 13;-->
                 })
                 .attr("text-anchor", function (d) {
                     return d.children || d._children ? "end" : "start";
                 })
                 .text(function (d) {
-                    return d.data.id + ":" + d.data.parentid;
+                    var models = ["DT", "LR", "NN", "kNN", "Ba"]
+                    var item = models[Math.floor(Math.random() * models.length)];
+                    <!--return d.data.id + ":" + d.data.parentid;-->
+                    <!--return Math.round(randomInRange(0,100) * 100) / 100;-->
+                    return item;
                 });
 
             // UPDATE
@@ -315,6 +333,10 @@ div.treeCell {
     buildTree(containerId);
     buildTree(containerId2);
     buildTree(containerId3);
+
+    function randomInRange(min, max) {
+      return Math.random() < 0.5 ? ((1-Math.random()) * (max-min) + min) : (Math.random() * (max-min) + min);
+    }
 
 </script>
 </body>
