--- a/webserver/src/main/resources/static/index.html
+++ b/webserver/src/main/resources/static/index.html
@@ -11,6 +11,65 @@
     <title>AutoML-genetic Playground</title>
 </head>
 <body>
+<style>
+
+    body {
+        font: 12px "Helvetica Neue", Helvetica, Arial, sans-serif;
+        position: relative;
+    }
+
+    .axis path,
+    .axis line {
+        fill: none;
+        stroke: #000;
+        shape-rendering: crispEdges;
+    }
+
+    .x.axis path {
+        display: none;
+    }
+
+    .line {
+        fill: none;
+        stroke: steelblue;
+        stroke-width: 1.5px;
+    }
+
+    .overlay {
+        fill: none;
+        pointer-events: all;
+    }
+
+    .focus circle {
+        fill: steelblue;
+    }
+
+    .tooltip {
+        width: 94px;
+        padding: 4px 10px;
+        border: 1px solid #aaa;
+        border-radius: 4px;
+        box-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+        position: absolute;
+        background-color: white;
+        font-size: 14px;
+        pointer-events: none;
+        -webkit-transition: all 0.25s;
+        -moz-transition: all 0.25s;
+        -ms-transition: all 0.25s;
+        -o-transition: all 0.25s;
+        transition: all 0.25s;
+    }
+
+    .tooltip div {
+        margin: 3px 0;
+    }
+
+    .tooltip-date, .tooltip-likes {
+        font-weight: bold;
+    }
+
+</style>
 <div class="container">
     <h1>AutoML Genetic</h1>
 </div>
@@ -19,18 +78,20 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
-<script type="text/javascript" src="js/d3-dispatch/d3-dispatch.js"></script>
+<!--<script type="text/javascript" src="js/d3-dispatch/d3-dispatch.js"></script>
 <script type="text/javascript" src="js/d3-selection/d3-selection.js"></script>
 <script type="text/javascript" src="js/d3-hierarchy/d3-hierarchy.js"></script>
 <script type="text/javascript" src="js/d3-timer/d3-timer.js"></script>
 <script type="text/javascript" src="js/d3-interpolate/d3-interpolate.js"></script>
 <script type="text/javascript" src="js/d3-color/d3-color.js"></script>
 <script type="text/javascript" src="js/d3-ease/d3-ease.js"></script>
-<script type="text/javascript" src="js/d3-transition/d3-transition.js"></script>
+<script type="text/javascript" src="js/d3-transition/d3-transition.js"></script>-->
+<script src="//d3js.org/d3.v3.min.js"></script>
 
 <br>
 <br>
 
+<div id="line_chart_container"></div>
 <div id="table_container"></div>
 <!-- Load React. -->
 <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
@@ -42,14 +103,53 @@
 
 <script type="text/babel" >
 
-    var ag_global_vars = {}
+    var ag_global_vars = { }
 
-    setInterval(function(){
-      ag_global_vars.tableRef.helloWorld()
-    }, 1000);
+    var connectToWS = function() {
+      var endpoint = 'ws://localhost:8088/ws';
+      if (ag_global_vars.myWebSocket !== undefined) {
+          ag_global_vars.myWebSocket.close()
+      }
+      ag_global_vars.myWebSocket = new WebSocket(endpoint);
+      ag_global_vars.myWebSocket.onmessage = (event) => {
+
+          var serverDataJson = JSON.parse(event.data);
+
+          var tableRelevantKeys = ["evolutionProgress", "population", "evaluatedTemplateData"]
+
+          if(tableRelevantKeys.includes(serverDataJson.key)) {
+            console.log("Forwarding data to tableRef")
+            ag_global_vars.tableRef.update(serverDataJson)
+          } else {
+            console.log("Update to other components")
+          }
+      };
+      ag_global_vars.myWebSocket.onopen = function(evt) {
+          console.log("onopen.");
+      };
+      ag_global_vars.myWebSocket.onclose = function(evt) {
+          console.log("onclose.");
+      };
+      ag_global_vars.myWebSocket.onerror = function(evt) {
+          console.log("Error!");
+      };
+    }
+
+    var sendMsg = function() {
+      var message = document.getElementById("myMessage").value;
+      ag_global_vars.myWebSocket.send(message);
+      console.log("Time of sending message to server:" + (new Date()).getTime());
+    }
+
+    var closeConn = function() {
+      ag_global_vars.myWebSocket.close();
+    }
+
+    connectToWS()
 
 </script>
-<!-- Load our React component. -->
+
+<script src="linechart.js" ></script>
 <script type="text/babel" src="table.js" ></script>
 
 </body>
