--- a/webserver/src/main/resources/static/index.html
+++ b/webserver/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/automl/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="/automl/css/bootstrap.min.css">-->
 
     <title>AutoML-genetic Playground</title>
 </head>
@@ -84,13 +84,15 @@
 <script type="text/javascript" src="js/d3-timer/d3-timer.js"></script>
 <script type="text/javascript" src="js/d3-interpolate/d3-interpolate.js"></script>
 <script type="text/javascript" src="js/d3-color/d3-color.js"></script>
-<script type="text/javascript" src="js/d3-ease/d3-ease.js"></script>
-<script type="text/javascript" src="js/d3-transition/d3-transition.js"></script>-->
-<script src="//d3js.org/d3.v3.min.js"></script>
+<script type="text/javascript" src="js/d3-ease/d3-ease.js"></script>-->
+<!--<script src="https://d3js.org/d3.v3.min.js"></script>-->
+<!--<script src="https://d3js.org/d3-scale.v3.min.js"></script>-->
+<!--<script src="https://d3js.org/d3-array.v2.min.js"></script>-->
 
 <br>
 <br>
 
+<div id="timeboxes_react" class="height:100px"></div>
 <div id="timeboxes_container"></div>
 <div id="line_chart_container"></div>
 <div id="table_container"></div>
@@ -99,10 +101,36 @@
 <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
+<script src="js/require.js"></script>
+<!--<script src="js/app.js"></script>-->
 <!--<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>-->
-<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<!--<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>-->
+<!--<script type="text/javascript" src="js/lib/d3-timer.js">-->
 
-<script type="text/babel" >
+<script type="text/javascript" >
+
+require.config({
+    baseUrl: "js/lib",
+    paths: {
+        "some": "../app",
+    },
+    jsx: {
+        fileExtension: '.jsx' // how to configure JSX with requirejs https://github.com/philix/jsx-requirejs-plugin
+    },
+
+    waitSeconds: 15
+  });
+
+requirejs(['d3-timer'], function( d3, inter) {
+    d3.timer(function(elapsed) {
+    console.log("Running d3-timer")
+    if (elapsed > 20000) t.stop();
+    }, 15000);
+});
+
+require(['jsx!reactcomponents/Timeboxes'], function (Timeboxes) {
+        console.log("Timeboxes react component has been loaded!")
+    });
 
     var ag_global_vars = { }
 
@@ -128,17 +156,7 @@
 
           }
 
-          if(serverDataJson.key == "evolutionProgress") {
-            if(typeof serverDataJson.evolution !== 'undefined') {
-             updateProgressBar(JSON.stringify(serverDataJson.evolution))
-             console.log("Evolution:"+ JSON.stringify(serverDataJson.evolution))
-             console.log("Generation:"+ JSON.stringify(serverDataJson.generation))
-            }
-            console.log(JSON.stringify(serverDataJson))
-          }
-          if(serverDataJson.key == "timeboxesSetup") {
-            steps = ['0', '1', '2'];
-          }
+
       };
       ag_global_vars.myWebSocket.onopen = function(evt) {
           console.log("onopen.");
@@ -165,116 +183,8 @@
 
 </script>
 
-<script>
-
-    var colors = { green: '#4DC87F', lightGreen: '#D9F0E3' };
-    var width = 960, height = 70, offset = 48;
-
-    width += offset * 2;
-    height += offset * 2;
-    var dimensions = '' + 0 + ' ' + 0 + ' ' + width + ' ' + height;
-
-    var svg = d3.select('#timeboxes_container').append('svg')
-        .attr('id', 'scene', true)
-        .attr('preserveAspectRatio', 'xMinYMin meet')
-        .attr('viewBox', dimensions)
-        .classed('svg-content', true);
-
-    var steps = ['0'];
-    stepWidth = (width - offset * 2) / (steps.length - 1),
-    currentStep = '0';
-
-    var progressBar = svg.append('g')
-                  .attr('transform', 'translate(' + offset + ',' + offset + ')')
-                  .style('pointer-events', 'none');
-
-    var progressBackground = progressBar.append('rect')
-        .attr('fill', colors.lightGreen)
-        .attr('height', 8)
-        .attr('width', width - offset * 2)
-        .attr('rx', 4)
-        .attr('ry', 4);
-
-    var progress = progressBar.append('rect')
-        .attr('fill', colors.green)
-        .attr('height', 8)
-        .attr('width', 0)
-        .attr('rx', 4)
-        .attr('ry', 4);
-
-    progress.transition()
-        .duration(1000)
-        .attr('width', function(){
-            var index = steps.indexOf(currentStep);
-            return (index + 1) * stepWidth;
-        });
-
-    progressBar.selectAll('circle')
-    .data(steps)
-    .enter()
-    .append('circle')
-    .attr('id', function(d, i){ return 'step_' + i; })
-    .attr('cx', function(d, i){ return i * stepWidth; })
-    .attr('cy', 4)
-    .attr('r', 20)
-    .attr('fill', '#FFFFFF')
-    .attr('stroke', colors.lightGreen)
-    .attr('strokeWidth', 6)
-
-    progressBar.selectAll('text')
-    .data(steps)
-    .enter()
-    .append('text')
-    .attr('id', function(d, i){ return 'label_' + i; })
-    .attr('dx', function(d, i){ return i * stepWidth; })
-    .attr('dy', 10)
-    .attr('text-anchor', 'middle')
-    .text(function(d, i) { return i + 1; })
-
-
-
-    function setupProgressBar(data_){
-
-    var output = [];
-    for(var i = 0; i < data_.length; i++){ output.push(data_[i].id.toString()); }
-    return output;
-
-    }
-
-    function updateProgressBar(step_){
-
-        progress.transition()
-            .duration(1000)
-            .attr('fill', colors.green)
-            .attr('width', function(){
-                var index = steps.indexOf(step_);
-                return (index) * stepWidth;
-            });
-
-        for(var i = 0; i < steps.length; i++){
-
-            if(i <= steps.indexOf(step_)) {
-
-                d3.select('#step_' + i).attr('fill', colors.green).attr('stroke', colors.green);
-                d3.select('#label_' + i).attr('fill', '#FFFFFF');
-
-
-            } else {
-
-                d3.select('#step_' + i).attr('fill', '#FFFFFF').attr('stroke', colors.lightGreen);
-                d3.select('#label_' + i).attr('fill', '#000000');
-
-            }
-
-        }
-
-    }
-
-
-</script>
-
-<script src="linechart.js" ></script>
-<!--<script type="text/babel" src="timeboxes.js" ></script>-->
+<!--<script src="linechart.js" ></script>-->
+<!--<script type="text/babel" src="Timeboxes.jsx" ></script>-->
 <script type="text/babel" src="table.js" ></script>
 
 </body>
