--- a/webserver/src/main/resources/static/index.html
+++ b/webserver/src/main/resources/static/index.html
@@ -78,23 +78,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
-<!--<script type="text/javascript" src="js/d3-dispatch/d3-dispatch.js"></script>
-<script type="text/javascript" src="js/d3-selection/d3-selection.js"></script>
-<script type="text/javascript" src="js/d3-hierarchy/d3-hierarchy.js"></script>
-<script type="text/javascript" src="js/d3-timer/d3-timer.js"></script>
-<script type="text/javascript" src="js/d3-interpolate/d3-interpolate.js"></script>
-<script type="text/javascript" src="js/d3-color/d3-color.js"></script>
-<script type="text/javascript" src="js/d3-ease/d3-ease.js"></script>-->
-<!--<script src="https://d3js.org/d3.v3.min.js"></script>-->
-<!--<script src="https://d3js.org/d3-scale.v3.min.js"></script>-->
-<!--<script src="https://d3js.org/d3-array.v2.min.js"></script>-->
-
 <br>
 <br>
 
-<div id="timeboxes_react" class="height:100px"></div>
 <div id="timeboxes_container"></div>
-<div id="line_chart_container"></div>
+<div id="barchart_container"></div>
+<div id="linechart_container"></div>
 <div id="table_container"></div>
 <!-- Load React. -->
 <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
@@ -102,10 +91,6 @@
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
 <script src="js/require.js"></script>
-<!--<script src="js/app.js"></script>-->
-<!--<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>-->
-<!--<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>-->
-<!--<script type="text/javascript" src="js/lib/d3-timer.js">-->
 
 <script type="text/javascript" >
 
@@ -117,19 +102,11 @@ require.config({
     jsx: {
         fileExtension: '.jsx' // how to configure JSX with requirejs https://github.com/philix/jsx-requirejs-plugin
     },
-
     waitSeconds: 15
   });
 
-requirejs(['d3-timer'], function( d3, inter) {
-    d3.timer(function(elapsed) {
-    console.log("Running d3-timer")
-    if (elapsed > 20000) t.stop();
-    }, 15000);
-});
-
-require(['jsx!reactcomponents/Timeboxes'], function (Timeboxes) {
-        console.log("Timeboxes react component has been loaded!")
+require(['jsx!reactcomponents/Barchart', 'jsx!reactcomponents/Table', 'jsx!reactcomponents/Linechart', 'jsx!reactcomponents/TimeboxProgressBar'], function (Timeboxes, Table, Linechart, TimeboxProgressBar) {
+        console.log("Barchart and Table react components have been loaded!")
     });
 
     var ag_global_vars = { }
@@ -154,6 +131,18 @@ require(['jsx!reactcomponents/Timeboxes'], function (Timeboxes) {
             console.log(JSON.stringify(serverDataJson))
             console.log("Update to other components")
 
+          }
+
+          if(serverDataJson.key == "evolutionProgress") {
+            if(typeof serverDataJson.evolution !== 'undefined') {
+            ag_global_vars.timeboxesRef.updateProgressBar(JSON.stringify(serverDataJson.evolution))
+             console.log("Evolution:"+ JSON.stringify(serverDataJson.evolution))
+             console.log("Generation:"+ JSON.stringify(serverDataJson.generation))
+            }
+            console.log(JSON.stringify(serverDataJson))
+          }
+          if(serverDataJson.key == "timeboxesSetup") {
+            steps = ['0', '1', '2'];
           }
 
 
@@ -182,10 +171,6 @@ require(['jsx!reactcomponents/Timeboxes'], function (Timeboxes) {
     connectToWS()
 
 </script>
-
-<!--<script src="linechart.js" ></script>-->
-<!--<script type="text/babel" src="Timeboxes.jsx" ></script>-->
-<script type="text/babel" src="table.js" ></script>
 
 </body>
 </html>
