Added TimeboxProgressBar react component

--- a/webserver/src/main/resources/static/automl-app/src/index.html
+++ b/webserver/src/main/resources/static/automl-app/src/index.html
@@ -68,8 +68,8 @@
     <h1>AutoML Genetic</h1>
 </div>
 <div id="container"></div>
-<!--<div id="timeboxes_container"></div>-->
-<div id="barchart_container"></div>
+<div id="timeboxes_container"></div>
+<!--<div id="barchart_container"></div>-->
 <!--<div id="linechart_container"></div>-->
 <div id="table_container"></div>
 
