--- a/webserver/src/main/resources/static/automl-app/src/index.html
+++ b/webserver/src/main/resources/static/automl-app/src/index.html
@@ -5,13 +5,43 @@
     <title>AutoML genetic</title>
 </head>
 <body>
+<div class="jumbotron">
 <div class="container">
     <h1>AutoML Genetic</h1>
 </div>
-<div id="container"></div>
+</div>
+
+<div class="container-fluid">
+    <!-- Stack the columns on mobile by making one full-width and the other half-width -->
+    <div class="row">
+        <div class="col-6 col-md-4" align="center">Fitness ( Phenotypic performance ) </div>
+        <div class="col-6 col-md-4">Complexity ( Avg. number of nodes per individual ) </div>
+        <div class="col-6 col-md-4">Gene frequencies</div>
+    </div>
+    <div class="row">
+        <div class="col-6 col-md-4"><div id="linechart_container"></div></div>
+        <div class="col-6 col-md-4">Chart 2</div>
+        <div class="col-6 col-md-4">Chart 3</div>
+    </div>
+
+
+    <!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
+    <div class="row">
+        <div class="col-6 col-md-4">Repetitions of individuals during evolution</div>
+        <div class="col-6 col-md-4">Avg depth of individuals</div>
+        <div class="col-6 col-md-4">.col-6 .col-md-4</div>
+    </div>
+
+    <!-- Columns are always 50% wide, on mobile and desktop -->
+    <div class="row">
+        <div class="col-6">.col-6</div>
+        <div class="col-6">.col-6</div>
+    </div>
+</div>
+
 <div id="timeboxes_container"></div>
 <!--<div id="barchart_container"></div>-->
-<div id="linechart_container"></div>
+
 <div id="table_container"></div>
 
 <script type="text/javascript" >
